--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>LINE GO CS</title>
-    <!-- Zendesk Widget Script -->
-    <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=8598ae7b-38c1-4880-84e0-b4f33ccb2a76"></script>
-    <script>
-        window.addEventListener('load', function() {
-            const waitForZendesk = setInterval(() => {
-                if (window.zE) {
-                    clearInterval(waitForZendesk);
-                    
-                    // Open Messenger chat window when page loads
-                    window.zE("messenger", "open");
 
-                    // Close the page when messenger window is closed
-                    window.zE("messenger:on", "close", () => {
-                        window.close();
-                    });
-                }
-            }, 100);
-        });
-    </script>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>LINE GO CS</title>
 </head>
+
 <body>
+  <!-- Zendesk Widget Script -->
+  <script id="ze-snippet"
+    src="https://static.zdassets.com/ekr/snippet.js?key=8598ae7b-38c1-4880-84e0-b4f33ccb2a76"></script>
+  <script>
+    window.addEventListener('load', function () {
+      const waitForZendesk = setInterval(() => {
+        if (window.zE) {
+          clearInterval(waitForZendesk);
+          
+          // Open Messenger chat window when page loads
+          window.zE("messenger", "open");
+
+          // Close the page when messenger window is closed
+          window.zE("messenger:on", "close", () => {
+            window.close();
+          });
+        }
+      }, 100);
+    });
+  </script>
 </body>
-</html> 
+
+</html>
