feat: midofy window close function

--- a/index.html
+++ b/index.html
@@ -16,13 +16,19 @@
       const waitForZendesk = setInterval(() => {
         if (window.zE) {
           clearInterval(waitForZendesk);
-          
+
           // Open Messenger chat window when page loads
           window.zE("messenger", "open");
 
           // Close the page when messenger window is closed
           window.zE("messenger:on", "close", () => {
-            window.close();
+            // For LIFF browser, use LIFF API to close window
+            if (window.liff) {
+              window.liff.closeWindow();
+            } else {
+              // Fallback for regular browsers
+              window.close();
+            }
           });
         }
       }, 100);
