--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
   <meta charset="utf-8" />
@@ -12,27 +12,24 @@
   <script id="ze-snippet"
     src="https://static.zdassets.com/ekr/snippet.js?key=8598ae7b-38c1-4880-84e0-b4f33ccb2a76"></script>
   <script>
-    window.addEventListener('load', function () {
-      const waitForZendesk = setInterval(() => {
-        if (window.zE) {
-          clearInterval(waitForZendesk);
+    // Wait for Zendesk widget to load
+    const waitForZE = setInterval(() => {
+      if (typeof zE !== 'undefined') {
+        clearInterval(waitForZE)
 
-          // Open Messenger chat window when page loads
-          window.zE("messenger", "open");
+        // 開啟頁面時，就預設打開聊天視窗（不顯示官方 Launcher）
+        zE('messenger', 'open')
 
-          // Close the page when messenger window is closed
-          window.zE("messenger:on", "close", () => {
-            if (window?.liff?.isInClient()) { 
-              // For LIFF browser, use LIFF API to close window
-              window.liff.closeWindow();
-            } else {
-              // Fallback for regular browsers
-              window.close();
-            }
-          });
-        }
-      }, 100);
-    });
+        // 觸發聊天視窗關閉時，判斷是否在 LIFF 內，是的話關閉 LIFF，否則關閉整個頁面
+        zE('messenger:on', 'close', () => {
+          if (liff.isInClient()) {
+            liff.closeWindow()
+          } else {
+            window.close()
+          }
+        })
+      }
+    }, 100)
   </script>
 </body>
 
